1999-02-16  Harri Porten  <porten@kde.org>

	* fixed SIGSEV caused by double-clicking on empty places.
	* introduced a simple sessionWidget that will catch the
        saveYourself() signal from the session manager and invoke saving all
        data. This is more robust than having concurring methods in every
        widget and works without the saved_already_for_session_management
        variable that was NOT unset if the user cancelled the shutdown (bug !)
	* renaming: missing slash broke renaming.
        * set atomic flag in cleanup(). Hope to have avoided occasional crash
        leading to data loss.
	* Replaced ~/.kde with KApplication::localkdedir()
        * option menu: disabled illogical switch between "3D frame" and
        "no frame" label. It is a checkable entry!

Fri May 29 05:36:36 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* KNotes are now automatically saved all 15 minutes. 
	* added explicit save command on request.

Thu Apr  9 03:21:54 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* knotes recognizes urls now.
	* Fixed up knotes and implemented docking properly

Thu Aug  7 18:50:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* knotes.cpp: knotes now save themselves on X sever exit
	
Mon Nov 17 21:32:28 1997  didier Belot <dib@avo.fr>

	* added all necessary stuff for locale (klocale->translate())

Sat Nov 22 13:13:05 1997 Matthias Ettrich <ettrich@kde.org>

	* sessionmanagement: uses kwm properties now, not only geometry info
	* look: pretty thin border. KPostit does no longer inherit QMultiline
	        but simply QFrame. New class: KPostitMultilineEdit.
	        New QMessage box for warning. Icon+Miniicon.
	* feel: moving possible with the label, rmb menu contains toDesktop
	        and sticky, notes are activated not only raised. Alt-F4
	        can remove a note now.
	* invokation: change: siguser1 will give you a new knote (like
	        taking a new paper from a block).